--- a/apps/team-member/src/app/components/loan-product-builder/loan-product-builder.component.html
+++ b/apps/team-member/src/app/components/loan-product-builder/loan-product-builder.component.html
@@ -198,6 +198,7 @@
                         <td>{{ creditor.label }}</td>
                         <td>${{ creditor.totalOwed }}</td>
                         <td>${{ creditor.monthlyPayment }}</td>
+                        <td>{{ creditor.apr }}%</td>
                       </tr>
                       }
                     </tbody>
