Refactor consumer form

--- a/libs/brand/src/styles/global/tabs.scss
+++ b/libs/brand/src/styles/global/tabs.scss
@@ -1,4 +1,8 @@
 .p-tabview {
+  a,
+  a:link {
+    color: #00a39e;
+  }
   .p-tabview-nav {
     padding-left: 0;
     border-bottom: 1px solid #ccc;
