--- a/libs/quote-calculator/src/lib/quote-form/quote-form.component.html
+++ b/libs/quote-calculator/src/lib/quote-form/quote-form.component.html
@@ -123,7 +123,7 @@
     </p-accordionTab>
     <p-accordionTab>
       <ng-template pTemplate="header">
-        <lib-icons icon="cog" class="me-2"></lib-icons> Customize Loan Options
+        <lib-icons icon="cog" class="me-2"></lib-icons> Loan Options
       </ng-template>
       <div class="quote-selector">
         <p class="label">Cash Out</p>
