--- a/apps/customer/src/app/routes/products/products.component.html
+++ b/apps/customer/src/app/routes/products/products.component.html
@@ -53,10 +53,21 @@
             <tbody>
               <tr>
                 <td class="has-label">
+                  <div class="label">Cash Out</div>
+                  <div class="value">
+                    {{
+                      product.systemDecision
+                        | currency : 'USD' : 'symbol' : '1.0-2'
+                    }}
+                  </div>
+                </td>
+              </tr>
+              <tr>
+                <td class="has-label">
                   <div class="label">Loan Amount</div>
                   <div class="value">
                     {{
-                      product.baseAdvance
+                      product.totalAdvance
                         | currency : 'USD' : 'symbol' : '1.0-2'
                     }}
                   </div>
@@ -65,7 +76,10 @@
               <tr>
                 <td class="has-label">
                   <div class="value">
-                    {{ product.monthlyPayment }}
+                    {{
+                      product.monthlyPayment
+                        | currency : 'USD' : 'symbol' : '1.0-2'
+                    }}
                   </div>
                   <div class="label">Per Month</div>
                 </td>
