Update dropdown in grid

--- a/apps/team-member/src/app/components/loan-product-builder/loan-product-builder.component.html
+++ b/apps/team-member/src/app/components/loan-product-builder/loan-product-builder.component.html
@@ -248,6 +248,9 @@
             <ng-template pTemplate="header">
               <lib-icons icon="eye" class="me-2"></lib-icons> Customer View
             </ng-template>
+            <div class="text-end mb-3" style="position: relative; z-index: 999">
+              <button class="p-button">Take Control</button>
+            </div>
             <div class="overlay"></div>
             <div class="px-3">
               <lib-quote-form
