--- a/apps/customer/src/app/routes/products/products.component.scss
+++ b/apps/customer/src/app/routes/products/products.component.scss
@@ -1,3 +1,8 @@
+.controls {
+  border: 1px solid #ccc;
+  margin-bottom: 1rem;
+  padding: 0.5rem;
+}
 .loan-products {
   display: flex;
   overflow-y: auto;
