--- a/apps/customer/src/app/routes/quote/quote.component.html
+++ b/apps/customer/src/app/routes/quote/quote.component.html
@@ -34,31 +34,37 @@
                   </div>
 
                   <div class="lp-details">
-                    <div class="label">Cash Flow Change</div>
-                    <div
-                      class="value green d-flex"
-                      style="align-items: center"
-                      *ngIf="product.paymentImpact > 0; else impact"
-                    >
+                    @if(product.paymentImpact > 0;){
+                    <div class="label">
+                      Monthly Savings
+                      <lib-icons
+                        icon="info-circle"
+                        pTooltip="Your monthly cash flow will be improved by this amount"
+                        tooltipPosition="bottom"
+                      ></lib-icons>
+                    </div>
+                    <div class="value d-flex" style="align-items: center">
                       {{
                         product.paymentImpact
                           | currency : 'USD' : 'symbol' : '1.0-2'
                       }}
-                      <span class="label ms-1" style="color: initial"
-                        >Monthly<br />Savings</span
-                      >
                     </div>
-                    <ng-template #impact>
-                      <div class="value" *ngIf="product.paymentImpact < 0">
-                        {{
-                          -product.paymentImpact
-                            | currency : 'USD' : 'symbol' : '1.0-2'
-                        }}
-                        <span class="label" style="color: initial"
-                          >Monthly</span
-                        >
-                      </div></ng-template
-                    >
+                    } @else {
+                    <div class="label">
+                      Monthly Cost
+                      <lib-icons
+                        icon="info-circle"
+                        pTooltip="This is the increase in your monthly cost"
+                        tooltipPosition="bottom"
+                      ></lib-icons>
+                    </div>
+                    <div class="value" *ngIf="product.paymentImpact < 0">
+                      {{
+                        -product.paymentImpact
+                          | currency : 'USD' : 'symbol' : '1.0-2'
+                      }}
+                    </div>
+                    }
                   </div>
 
                   <div class="lp-details">
