Updates to TM experience

--- a/apps/customer/src/app/routes/products/products.component.html
+++ b/apps/customer/src/app/routes/products/products.component.html
@@ -120,6 +120,8 @@
           </div>
         </div>
         <div class="lp-details mt-3">
+          <p-checkbox [binary]="true" label="Compare" inputId="binary" />
+          <hr />
           <button class="p-button w-100 text-center d-block">
             <lib-icons icon="thumbsup" class="me-2"></lib-icons> Select
           </button>
