--- a/apps/team-member/src/app/components/loan-product-builder/loan-product-builder.component.scss
+++ b/apps/team-member/src/app/components/loan-product-builder/loan-product-builder.component.scss
@@ -20,6 +20,12 @@
   .red {
     color: red;
   }
+  .blue {
+    color: blue;
+  }
+  .orange {
+    color: orange;
+  }
   .clickable {
     cursor: pointer;
   }
