--- a/apps/team-member/src/app/components/loan-product-builder/loan-products-grid/loan-products-grid.component.scss
+++ b/apps/team-member/src/app/components/loan-product-builder/loan-products-grid/loan-products-grid.component.scss
@@ -1,4 +1,5 @@
-.loan-products-table {
+.loan-products-table,
+.non-credit-products-table {
   .actions {
     .p-button {
       padding: 0.15rem 0.5rem;
