--- a/apps/users/src/app/users.component.html
+++ b/apps/users/src/app/users.component.html
@@ -1,24 +1,25 @@
 <lib-masterpage>
-  <div class="container">
+  <div class="container" *ngIf="svc.state$ | async as state">
     <h1>Users</h1>
     <div class="row">
       <div class="col col-12 col-md-8">
-        <lib-api-state [state]="state" *ngIf="svc.state$ | async as state">
-          <table class="table table-striped">
-            <tbody>
-              @for(user of state.data; track user?.id) {
-              <tr>
-                <td>{{ user?.username }}</td>
-                <td>TEMP</td>
-                <td>TEMP</td>
-                <td>TEMP</td>
-                <td>TEMP</td>
-                <td>TEMP</td>
-              </tr>
-              }
-            </tbody>
-          </table>
-        </lib-api-state>
+        <!--
+        <lib-api-state [state]="state" *ngIf="svc.state$ | async as state"> </lib-api-state>
+        -->
+        <table class="table table-striped">
+          <tbody>
+            @for(user of state.data; track user?.id) {
+            <tr>
+              <td>{{ user?.username }}</td>
+              <td>TEMP</td>
+              <td>TEMP</td>
+              <td>TEMP</td>
+              <td>TEMP</td>
+              <td>TEMP</td>
+            </tr>
+            }
+          </tbody>
+        </table>
       </div>
       <div class="col col-12 col-md-4">
         <button p-button (click)="userAdd()">Add User</button> |
